# daemon-manager

./: .gitignore  .incignore  .whitelist  CMakeLists.txt  README.md  environment.yml
CMake/: Findgmock.cmake  Findzmqpp.cmake
examples/: CMakeLists.txt  daemon.proto  simple_request_client.cpp  simple_server.cpp
examples/python/: simple_publish_server.py  simple_request_client.py  simple_response_server.py  simple_subscribe_client.py
recipe/: build.sh  meta.yaml
src/: CMakeLists.txt  common.hpp  daemon_client.hpp  daemon_client.ipp  daemon_server.hpp  daemon_server.ipp  serializer.hpp
src/python/: CMakeLists.txt  pydaemon.cpp
tests/: CMakeLists.txt  daemon_request_client_test.cpp  daemon_server_test.cpp  daemon_subscriber_test.cpp  mock_serializer.hpp  mock_socket.hpp
tests/module/: request_response_test.py
